<?xml version="1.0" encoding="utf-8"?>

<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Prayer Book</string>
    <string name="prayers">Prayers</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="search_ellipsis">Search…</string>
    <string name="languages">Languages</string>
    <string name="share">Share</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="persian" translatable="false">فارسی</string>
    <string name="french" translatable="false">Français</string>
    <string name="dutch" translatable="false">Nederlands</string>
    <string name="favorites">Favorites</string>
    <string name="slovak" translatable="false">Slovenčina</string>
    <string name="czech" translatable="false">Čeština</string>
    <string name="fijian" translatable="false">Vakaviti</string>
    <string name="icelandic" translatable="false">íslenska</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="print_ellipsis">Print…</string>
    <string name="document">Document</string>
    <string name="classic_theme">Classic theme</string>
    <string name="search_prayers">Search prayers</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="recents">Recents</string>
    <string name="bookmark">Bookmark</string>
    <string name="clear">Clear</string>
    <string name="clear_recents_interrogative">Clear recents?</string>
    <string name="no">No</string>

    <plurals name="number_of_words">
        <item quantity="one">%d word</item>
        <item quantity="other">%d words</item>
    </plurals>
</resources>
