<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_bookmark"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_increase_text_size"
        android:title="A+"
        app:showAsAction="always"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/action_decrease_text_size"
        android:title="A-"
        app:showAsAction="always"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/action_classic_theme"
        android:title="@string/classic_theme"
        android:checkable="true"/>
    <item
        android:id="@+id/action_share_prayer"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_print_prayer"
        android:title="@string/print_ellipsis"/>
</menu>